[tool.poetry]
name = "astroglial-analysis"
version = "0.2.0a0"
description = "This project attempts to suplement some analysis alogorithims for segmented astroglial cells from zebrafish brain"
authors = ["javidaf <javid.af@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
cellpose = "2.3.2"
matplotlib = "3.9"
numpy = "1.26.4"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
scipy = "1.13"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"
astroglial-segmentation = { git = "https://github.com/yaksilab/Astrolglial-cell-segmentation.git", branch = "new-output-dir" }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
