[tool.poetry]
name = "astroglial-analysis"
version = "1.0.2"
description = "This project attempts to suplement some analysis alogorithims for segmented astroglial cells from zebrafish brain"
authors = ["javidaf <javid.af@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cellpose = "2.3.2"
numpy = "1.26.4"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
scipy = "1.13"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"
astroglial-segmentation = { git = "https://github.com/yaksilab/Astrolglial-cell-segmentation.git", tag = "v1.2.3" }
neural-network = {git = "https://github.com/javidaf/super-nerual-net.git"}
matplotlib = "^3.10.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
